<resources>
    <string name="app_name">Provenance</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="sponsorship">Sponsorship</string>
    <string name="team">Team</string>
    <string name="profile">Profile</string>
    <string name="provenance">Provenance</string>
    <string name="provenance_info">Provenance marks the origin of the annual techno-cultural festival of RVS College of Engineering and Technology. This festival is an attempt to collaborate two distinctive yet very significant fields together. At Provenance, you would receive an opportunity to venture and explore your technical capabilities as well as earn a platform to brush up your artistic competence. Let us put a step forward towards actualizing your aspirations. So Come-Create-Cherish your dreams till you reach them.</string>
</resources>
